<resources>
    <string name="app_name">Simple Clock</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="lasts">lasts</string>
    <string name="minute_short">min</string>
    <string name="repeat">Repeat</string>
    <string name="sunday_one">S</string>
    <string name="monday_one">M</string>
    <string name="tuesday_one">T</string>
    <string name="wednesday_one">W</string>
    <string name="thursday_one">T</string>
    <string name="friday_one">F</string>
    <string name="saturday_one">S</string>
    <string name="label">Label</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_repeat">You cannot activate an alarm that occurs on no days.</string>
    <string name="error">Error</string>
    <string name="confirm_delete">Are you sure you wish to delete this alarm?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lasts_title">Lasts</string>
    <string name="dismiss_alarm">Dismiss Alarm</string>
</resources>
