<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_time"
            android:clickable="true"
            android:onClick="buttonPress">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_time"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:text="12:45"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_time"
                android:layout_alignBaseline="@+id/text_time"
                android:layout_marginLeft="5dp"
                android:id="@+id/text_time_position"
                android:text="AM"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="end"
            android:id="@+id/text_lasts"
            android:text="lasts 5 min"
            android:clickable="true"
            android:onClick="buttonPress"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_active"
            android:checked="true" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_summary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/text_summary"
            android:textStyle="bold"
            android:text="tomorrow"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_column="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_time"
            android:layout_alignParentRight="true"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/button_expand"
            android:src="@drawable/ic_expand_more_24dp"
            android:onClick="buttonPress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:background="@color/gray" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_expanded">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_repeat"
            android:text="@string/repeat"
            android:onClick="buttonPress"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/layout_repeat"
            android:orientation="horizontal"
            android:columnCount="7">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_sunday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/sunday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_monday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/monday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_tuesday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/tuesday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_wednesday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/wednesday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_thursday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/thursday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_friday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/friday_one"
                android:onClick="buttonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:id="@+id/button_saturday"
                android:background="@drawable/ic_circle_transparent_24dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/saturday_one"
                android:onClick="buttonPress"/>

        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_label"
            android:text="@string/label"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="left"
            android:paddingLeft="50dp"
            android:textAllCaps="false"
            android:onClick="buttonPress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_delete"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_delete_24dp"
                android:onClick="buttonPress"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/button_shrink"
                android:src="@drawable/ic_expand_less_24dp"
                android:onClick="buttonPress"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>